--- a/01-Chapter2.Rmd
+++ b/01-Chapter2.Rmd
@@ -222,3 +222,244 @@ for(i in seq_along(Linf)) {
 }
 
 ```
+
+## Exercise 3 {.unnumbered}
+
+> ***Math Prerequisite:*** derivatives
+
+### The biology
+
+If we recall that $b$ is our allometric parameter and it is often around
+3 for fish we can plug this into the maturity equation provided.
+
+$$
+t_m = \frac{1}{k}*log\left(\frac{m + bk}{m}\right)
+$$
+
+Similarly, we can use the three different mortality values that Marc
+provided (0.1, 0.2, 0.5) in combination with a sequence of $k$, growth
+rate values, to visualize optimal maturity ages.
+
+```{r}
+tm <- function(b,m,k) 1/k * log((m + b*k)/m)
+agem <- c(0.1, 0.2, 0.5)
+col<-rainbow(length(agem))
+
+for(i in seq_along(agem)) {
+    curve(tm(3, agem[i], x), from=0.1, to=2, add=i!=1, col=col[i], ylim=c(0,15), ylab = "Optimal age at maturity", xlab = "Growth rate, k", main="Multiple values of M with b=3")
+}
+```
+
+The main point here is to realize that in systems where natural
+mortality is high, whether this is disease, predation, starvation or any
+other source, they incentive an earlier maturity age. This makes
+intuitive sense, if you are going to die younger, you should have kids
+younger. But there's also another important point, the strength of this
+relationship decreases as growth rate tends to increase and also reduces
+age at maturity.
+
+But how did we come to this conclusion? This is what Marc is asking us
+to do now. Show that this equation is possible from first principles by
+using our understanding of growth and an exponential distribution for
+survival. And specifically find the length at maturity.
+
+### The challenge
+
+<center>
+
+**Find length at maturity assuming that fitness could be represented
+by** $F(t) = e^{-mt}*f*L(t)^b$
+
+</center>
+
+### The solution
+
+In the previous exercise, Marc assumed that fitness could be represented
+by $F(t) = e^{-mt}\cdot f \cdot L(t)^b$ where the first half of the term
+corresponds to survival given an age, and the second half of the term
+corresponds to reproductive output given an age and scaling component.
+The first step is to replace $L(t)$ with our previously derived growth
+equation which would look like something like this. But we can also do
+one extra step to make things easier for ourselves, we cancel out the
+"birth" term, where we assume size is equal to 0. Realize this
+assumption may not be appropriate if size at birth is relatively large
+compared to $L_\infty$. Also, fecundity, f is a constant so we can set
+that to 1.
+
+$$
+F(t) = e^{-mt} \cdot f (L\_\infty(1-e^{(-kt)}+L_0*exp(-kt))^b
+
+\\[10pt] 
+\text{for simplicity we can drop the last term and set f = 1}
+\\[10pt]
+
+F(t) = e^{-mt} \cdot 1 (L\_\infty(1-e^{(-kt)}))^b
+\cancel{+L_0*exp(-kt))} 
+$$
+
+Since we want to figure out the change in
+$F$ given this function we take the derivative of this with respect to
+$L$.
+
+$$
+
+F(t) = e^{-mt} \cdot 1 (L_\infty(1-e^{(-kt)}))^b
+
+\\[10pt] 
+\text{distribute L infinity and take derivative}
+\\[10pt]
+
+
+\frac{d}{dt}\left(e^{-m t}\left(l_\infty-l_\infty e^{-k t}\right)^{b}\right)
+
+
+\\[10pt] 
+\text{Use the product rule for the survival and reproductive output}
+\\[10pt]
+
+
+=\left(l_\infty-e^{-k t} l_\infty\right)^{b}\left(\frac{d}{d t}\left(e^{-m t}\right)\right)+e^{-m t}\left(\frac{d}{d t}\left(\left(l_\infty-e^{-k t} l_\infty\right)^{b}\right)\right)
+
+
+\\[10pt] 
+\text{Using the chain rule for the first part of our product rule}
+\\[10pt]
+
+
+=\left(l_\infty-e^{-k t} l_\infty\right)^{b} e^{-m t}\left(\frac{d}{d t}(-m t)\right) + e^{-m t}\left(\frac{d}{d t}\left(\left(l_\infty-e^{-k t} l_\infty\right)^{b}\right)\right)
+
+\\[10pt] 
+\text{Factor out constant, m, and derivative of t = 1}
+\\[10pt] 
+
+
+=\left(l_\infty-e^{-k t} l_\infty\right)^{b} e^{-m t}\cdot-m + e^{-m t}\left(\frac{d}{d t}\left(\left(l_\infty-e^{-k t} l_\infty\right)^{b}\right)\right)
+
+\\[10pt] 
+\text{Now let's finish the other half of our original product rule by using the chain rule again}
+\\[10pt]
+
+=-e^{-m t} m\left(l_\infty-e^{-k t} l_\infty\right)^{b}+b \cdot  e^{-m t}\left(l_\infty-e^{-k t} l_\infty\right)^{b-1}\left(\frac{d}{d t}\left(l_\infty-e^{-k t} l_\infty\right)\right)
+
+\\[10pt]
+\text{take the derivative of each inside term}
+\\[10pt]
+
+\begin{aligned}
+&=-e^{-m t} m\left(l_\infty-e^{-k t} l_\infty\right)^{b}+ -l_\infty\left(\frac{d}{d t}\left(e^{-k t}\right)\right)+\frac{d}{d t}\left(l_\infty\right) \cdot b \cdot e^{-m t}\left(l_\infty-e^{-k t} l_\infty\right)^{b-1}
+\end{aligned}
+
+
+\\[10pt]
+\text{ use the chain rule for the first derivative, factor out constant, k, and derivative of t = 1}
+\\[10pt]
+
+
+\begin{aligned}
+=&-e^{-m t} m\left(l_\infty-e^{-k t} l_\infty\right)^{b}+ \left(  l_\infty \cdot k \cdot e^{-k t}  + \frac{d}{d t}(l_\infty)\right) \cdot b\cdot e^{-m t}\left(l_\infty-e^{-k t} l_\infty\right)^{b-1}
+\end{aligned}
+
+\\[10pt]
+\text{ The derivative of L infinity is zero }
+\\[10pt] 
+
+
+=-e^{-m t} m\left(l_\infty-e^{-k t} l_\infty\right)^{b} + \left(l_\infty \cdot k \cdot e^{-k t} +0\right) \cdot b\cdot e^{-m t}\left(l_\infty-e^{-k t} l_\infty\right)^{b-1}
+
+\\[10pt]
+\text{ So the final equation is the following }
+\\[10pt] 
+
+F'(t) = -e^{-m t} m\left(l_\infty-e^{-k t} l_\infty\right)^{b} + \left(l_\infty \cdot k \cdot e^{-k t}\right) \cdot b\cdot e^{-m t}\left(l_\infty-e^{-k t} l_\infty\right)^{b-1}
+
+\\[10pt]
+\text{ which we can flip around and simplify to look nice}
+\\[10pt] 
+
+F'(t) = 
+b\cdot e^{-kt-mt} \cdot l_\infty \cdot k\left(l_\infty-e^{-k t} l_\infty\right)^{b-1}
+-e^{-m t} m\left(l_\infty-e^{-k t} l_\infty\right)^{b}
+
+$$
+That was a beast of a derivative. Let's take a moment to recap what we did. We started with a function that describes fitness over time now we are looking at how fitness changes over time. To find the optimum length of maturity we still need to solve for $t$ after setting the equation equal to 0. 
+
+
+
+
+$$
+
+0 = b\cdot e^{-kt-mt} \cdot l_\infty \cdot k\left(l_\infty-e^{-k t} l_\infty\right)^{b-1}
+-e^{-m t} m\left(l_\infty-e^{-k t} l_\infty\right)^{b}
+
+\\[10pt]
+\text{this is a little complex so lets rename all coefficeints}
+\\
+\text{G in the first term and S in the second term and seperate the exponent}
+\\[10pt] 
+
+0 = \frac{G \left(l_\infty-e^{-k t} l_\infty\right)^{b}}{\left(l_\infty-e^{-k t} l_\infty\right)}-S\left(l_\infty-e^{-k t} l_\infty\right)^{b}
+
+\\
+\text{now we can divide out the parantheses with the b to get}
+\\[10pt] 
+
+0 = \frac{G}{\left(l_\infty-e^{-k t} l_\infty\right)} - S
+
+
+\\[10pt] 
+\text{we can also divide by G to get}
+\\[10pt] 
+
+0 = \frac{1}{\left(l_\infty-e^{-k t} l_\infty\right)} - \frac{S}{G}
+
+\\[10pt] 
+\text{now recall G and S are placeholders but now alot of these coefficients (L infinity) can cancel out and simplify}
+\\[10pt] 
+
+0 = \frac{1}{\left(1-e^{-k t}\right)} - \frac{me^{kt}}{bk}
+
+\\[10pt] 
+\text{we can now move the 2nd term over}
+\\[10pt] 
+
+ \frac{1}{\left(1-e^{-k t}\right)} = \frac{me^{kt}}{bk}
+
+\\[10pt] 
+\text{we can multiply out the bottom parantheses and distribute it to the other term}
+\\[10pt] 
+
+1 = \frac{me^{kt}}{bk} - \frac{m}{bk}
+
+\\[10pt] 
+\text{great! now m, b, and k can move over}
+\\[10pt]
+
+\frac{bk}{m} = e^{kt} - 1
+
+\\[10pt] 
+\text{add the one and take the log to remove the exponent}
+\\[10pt]
+
+log\left(\frac{bk}{m} + 1\right) = kt
+
+
+\\[10pt] 
+\text{now just move the k over}
+\\[10pt]
+
+\frac{1}{k}log\left(\frac{bk}{m} + 1\right) = t
+
+\\[10pt] 
+\text{and the inside just simplifies to m as denominator}
+\\[10pt]
+
+t = \frac{1}{k}*log\left(\frac{m + bk}{m}\right)
+
+$$
+
+
+### Checking our work
+
+No need to check our work here! Our equation matches Marc's!
+
+### Reflecting on the biology
