--- a/01-Chapter2.Rmd
+++ b/01-Chapter2.Rmd
@@ -45,7 +45,7 @@ simply as the following.
 
 $$
 \\[10pt]
-\frac{dW}{dt} = \text{anabolic - catabolic}
+\frac{dW}{dt} = \textsf{anabolic - catabolic}
 \\[10pt]
 $$ We take things a step further and translate the anabolic and
 catabolic to quantifiable terms that link to an organism's metabolism.
@@ -71,11 +71,11 @@ $$
 \\[10pt]
 \frac{dW}{dt} = 3\rho L^2 \frac{dL}{dt} = \sigma L^2 -cL^3
 \\[10pt]
-\text{after simplifying we get}
+\textsf{after simplifying we get}
 \\[10pt]
 \frac{dL}{dt} = \frac{\sigma}{3\rho}-\frac{c}{3\rho}L
 \\[10pt]
-\text{after rearranging we get}
+\textsf{after rearranging we get}
 \\[10pt]
 \frac{dL}{dt} = \frac{c}{3\rho} \left(\frac{\sigma}{c}-L\right) = k(L_{\infty}-L)
 $$
@@ -97,14 +97,16 @@ $L(0)=L_0$
 ### The solution
 
 Here Marc suggested an alternative way to group the parameters and we
-need to check the units so they make sense. $$
+need to check the units so they make sense. 
+$$
 \\[10pt]
 q = \frac{\sigma}{3\rho} 
 \\[10pt]
 k = \frac{c}{3\rho}
 \\[10pt] 
 \frac{dL}{dt} = q-kL
-$$ If the derivative is some unit length over time then we can assume
+$$ 
+If the derivative is some unit length over time then we can assume
 something like centimeters per day. That would require the other two
 terms to have the same units. $q$ is by itself so centimeters per day is
 fine but $k$ is a little trickier. We know $L$ is centimeters but we
@@ -135,61 +137,65 @@ L_\inf = \frac{\sigma}{c}
 c = \frac{kg}{day*cm^3}
 \\[10pt]
 \frac{\sigma}{c} = cm
-$$ Now to find the unique solution for the equation that will require
+$$ 
+
+Now to find the unique solution for the equation that will require
 some integration.
 
 $$
-\text{we start with our equation}
+\textsf{we start with our equation}
 \\[10pt]
 \frac{dL}{dt} = k(L_{\infty}-L)\\[10pt]
 \\[10pt] 
-\text{we then try to group all the L's together}
+\textsf{we then try to group all the L's together}
 \\[10pt]
 \frac{dL}{(L_{\infty}-L)} = k*dt
 \\[10pt]
-\text{now this is simpler to integrate}
+\textsf{now this is simpler to integrate}
 \\[10pt]
 \int{\frac{dL}{(L_{\infty}-L)}}=k\int{dt}
 \\[10pt]
-\text{notice we moved k out front and now we integrate}
+\textsf{notice we moved k out front and now we integrate}
 \\[10pt]
-$$ Now remember that the derivative of the natural log of a number is
+$$ 
+
+Now remember that the derivative of the natural log of a number is
 one over that number. Since we want the integral we just need to go in
 reverse. If you notice the left side of the equation is one over a
 number. Our integral will be a natural log! And for the other side it's
 just $t$ plus some constant.
 
 $$
-\text{integrate using natural log rule, notice the negative out front}
+\textsf{integrate using natural log rule, notice the negative out front}
 \\[10pt]
 -ln(L_\infty-L(t))=kt+C
 \\[10pt] 
-\text{for simplicity let's move the negative over}
+\textsf{for simplicity let's move the negative over}
 \\[10pt]
 ln(L_\infty-L(t))=-kt+C
 \\[10pt]
-\text{now we want to remove the ln by using an exponent which applies to both sides but not C}
+\textsf{now we want to remove the ln by using an exponent which applies to both sides but not C}
 \\[10pt]
 exp(ln(L_\infty-L(t)))=C*exp(-kt)
 \\[10pt]
-\text{which after simplifying and isolating L(t), looks like this}
+\textsf{which after simplifying and isolating L(t), looks like this}
 \\[10pt]
 L(t)=L_\infty-C*exp(-kt)
 \\[10pt]
-\text{now that we have L(t) we can use the initial condition Marc provided, where L(0) = L0, t = 0, to figure out what C is}
+\textsf{now that we have L(t) we can use the initial condition Marc provided, where L(0) = L0, t = 0, to figure out what C is}
 \\[10pt]
 L(t)=L_\infty-C*exp(-k*0) = L_0
 \\[10pt]
 C = L_\infty-L_0
-\text{Now we just plug C back into the equation to figure out L(t) with a real constant!}
+\textsf{Now we just plug C back into the equation to figure out L(t) with a real constant!}
 \\[10pt]
 L(t)=L_\infty-(L_\infty-L_0)*exp(-kt)
 \\[10pt]
-\text{distribute the new C value}
+\textsf{distribute the new C value}
 \\[10pt]
 L(t)=L_\infty-L_\infty*exp(-kt)+L_0*exp(-kt)
 \\[10pt]
-\text{factor out Linf}
+\textsf{factor out Linf}
 \\[10pt]
 L(t)=L_\infty(1-exp(-kt)+L_0*exp(-kt)
 $$
@@ -223,9 +229,9 @@ for(i in seq_along(Linf)) {
 
 ```
 
-## Exercise 3 {.unnumbered}
+## Exercise 3 & 4 {.unnumbered}
 
-> ***Math Prerequisite:*** derivatives
+> ***Math Prerequisite:*** derivatives and algebra
 
 ### The biology
 
@@ -290,96 +296,64 @@ $$
 F(t) = e^{-mt} \cdot f (L\_\infty(1-e^{(-kt)}+L_0*exp(-kt))^b
 
 \\[10pt] 
-\text{for simplicity we can drop the last term and set f = 1}
+\textsf{for simplicity we can drop the last term and set f to 1}
 \\[10pt]
 
-F(t) = e^{-mt} \cdot 1 (L\_\infty(1-e^{(-kt)}))^b
-\cancel{+L_0*exp(-kt))} 
+F(t) = e^{-mt} \cdot 1 (L\_\infty(1-e^{(-kt)}))^b\cancel{+L_0*exp(-kt))} 
+
 $$
 
 Since we want to figure out the change in
-$F$ given this function we take the derivative of this with respect to
-$L$.
+$F$ given this function we take the derivative of this with respect to $L$.
 
 $$
-
 F(t) = e^{-mt} \cdot 1 (L_\infty(1-e^{(-kt)}))^b
-
 \\[10pt] 
-\text{distribute L infinity and take derivative}
+\textsf{distribute L infinity and take derivative}
 \\[10pt]
-
-
 \frac{d}{dt}\left(e^{-m t}\left(l_\infty-l_\infty e^{-k t}\right)^{b}\right)
-
-
 \\[10pt] 
-\text{Use the product rule for the survival and reproductive output}
+\textsf{Use the product rule for the survival and reproductive output}
 \\[10pt]
-
-
 =\left(l_\infty-e^{-k t} l_\infty\right)^{b}\left(\frac{d}{d t}\left(e^{-m t}\right)\right)+e^{-m t}\left(\frac{d}{d t}\left(\left(l_\infty-e^{-k t} l_\infty\right)^{b}\right)\right)
-
-
 \\[10pt] 
-\text{Using the chain rule for the first part of our product rule}
+\textsf{Using the chain rule for the first part of our product rule}
 \\[10pt]
-
-
 =\left(l_\infty-e^{-k t} l_\infty\right)^{b} e^{-m t}\left(\frac{d}{d t}(-m t)\right) + e^{-m t}\left(\frac{d}{d t}\left(\left(l_\infty-e^{-k t} l_\infty\right)^{b}\right)\right)
-
 \\[10pt] 
-\text{Factor out constant, m, and derivative of t = 1}
+\textsf{Factor out constant, m, and derivative of t = 1}
 \\[10pt] 
-
-
 =\left(l_\infty-e^{-k t} l_\infty\right)^{b} e^{-m t}\cdot-m + e^{-m t}\left(\frac{d}{d t}\left(\left(l_\infty-e^{-k t} l_\infty\right)^{b}\right)\right)
-
 \\[10pt] 
-\text{Now let's finish the other half of our original product rule by using the chain rule again}
+\textsf{Now let's finish the other half of our original product rule by using the chain rule again}
 \\[10pt]
-
 =-e^{-m t} m\left(l_\infty-e^{-k t} l_\infty\right)^{b}+b \cdot  e^{-m t}\left(l_\infty-e^{-k t} l_\infty\right)^{b-1}\left(\frac{d}{d t}\left(l_\infty-e^{-k t} l_\infty\right)\right)
-
 \\[10pt]
-\text{take the derivative of each inside term}
+\textsf{take the derivative of each inside term}
 \\[10pt]
-
 \begin{aligned}
 &=-e^{-m t} m\left(l_\infty-e^{-k t} l_\infty\right)^{b}+ -l_\infty\left(\frac{d}{d t}\left(e^{-k t}\right)\right)+\frac{d}{d t}\left(l_\infty\right) \cdot b \cdot e^{-m t}\left(l_\infty-e^{-k t} l_\infty\right)^{b-1}
 \end{aligned}
-
-
 \\[10pt]
-\text{ use the chain rule for the first derivative, factor out constant, k, and derivative of t = 1}
+\textsf{ use the chain rule for the first derivative, factor out constant, k, and derivative of t = 1}
 \\[10pt]
-
-
 \begin{aligned}
 =&-e^{-m t} m\left(l_\infty-e^{-k t} l_\infty\right)^{b}+ \left(  l_\infty \cdot k \cdot e^{-k t}  + \frac{d}{d t}(l_\infty)\right) \cdot b\cdot e^{-m t}\left(l_\infty-e^{-k t} l_\infty\right)^{b-1}
 \end{aligned}
-
 \\[10pt]
-\text{ The derivative of L infinity is zero }
+\textsf{ The derivative of L infinity is zero }
 \\[10pt] 
-
-
 =-e^{-m t} m\left(l_\infty-e^{-k t} l_\infty\right)^{b} + \left(l_\infty \cdot k \cdot e^{-k t} +0\right) \cdot b\cdot e^{-m t}\left(l_\infty-e^{-k t} l_\infty\right)^{b-1}
-
 \\[10pt]
-\text{ So the final equation is the following }
+\textsf{ So the final equation is the following }
 \\[10pt] 
-
 F'(t) = -e^{-m t} m\left(l_\infty-e^{-k t} l_\infty\right)^{b} + \left(l_\infty \cdot k \cdot e^{-k t}\right) \cdot b\cdot e^{-m t}\left(l_\infty-e^{-k t} l_\infty\right)^{b-1}
-
 \\[10pt]
-\text{ which we can flip around and simplify to look nice}
+\textsf{ which we can flip around and simplify to look nice}
 \\[10pt] 
-
 F'(t) = 
 b\cdot e^{-kt-mt} \cdot l_\infty \cdot k\left(l_\infty-e^{-k t} l_\infty\right)^{b-1}
 -e^{-m t} m\left(l_\infty-e^{-k t} l_\infty\right)^{b}
-
 $$
 That was a beast of a derivative. Let's take a moment to recap what we did. We started with a function that describes fitness over time now we are looking at how fitness changes over time. To find the optimum length of maturity we still need to solve for $t$ after setting the equation equal to 0. 
 
@@ -387,79 +361,113 @@ That was a beast of a derivative. Let's take a moment to recap what we did. We s
 
 
 $$
-
 0 = b\cdot e^{-kt-mt} \cdot l_\infty \cdot k\left(l_\infty-e^{-k t} l_\infty\right)^{b-1}
 -e^{-m t} m\left(l_\infty-e^{-k t} l_\infty\right)^{b}
-
 \\[10pt]
-\text{this is a little complex so lets rename all coefficeints}
-\\
-\text{G in the first term and S in the second term and seperate the exponent}
+\textsf{this is a little complex so lets rename all coefficeints}
+\\[10pt]
+\textsf{G in the first term and S in the second term and seperate the exponent}
 \\[10pt] 
-
 0 = \frac{G \left(l_\infty-e^{-k t} l_\infty\right)^{b}}{\left(l_\infty-e^{-k t} l_\infty\right)}-S\left(l_\infty-e^{-k t} l_\infty\right)^{b}
-
-\\
-\text{now we can divide out the parantheses with the b to get}
+\\[10pt]
+\textsf{now we can divide out the parantheses with the b to get}
 \\[10pt] 
-
 0 = \frac{G}{\left(l_\infty-e^{-k t} l_\infty\right)} - S
-
-
 \\[10pt] 
-\text{we can also divide by G to get}
+\textsf{we can also divide by G to get}
 \\[10pt] 
-
 0 = \frac{1}{\left(l_\infty-e^{-k t} l_\infty\right)} - \frac{S}{G}
-
 \\[10pt] 
-\text{now recall G and S are placeholders but now alot of these coefficients (L infinity) can cancel out and simplify}
+\textsf{now recall G and S are placeholders but now alot of these coefficients (L infinity) can cancel out and simplify}
 \\[10pt] 
-
 0 = \frac{1}{\left(1-e^{-k t}\right)} - \frac{me^{kt}}{bk}
-
 \\[10pt] 
-\text{we can now move the 2nd term over}
+\textsf{we can now move the 2nd term over}
 \\[10pt] 
-
  \frac{1}{\left(1-e^{-k t}\right)} = \frac{me^{kt}}{bk}
-
 \\[10pt] 
-\text{we can multiply out the bottom parantheses and distribute it to the other term}
+\textsf{we can multiply out the bottom parantheses and distribute it to the other term}
 \\[10pt] 
-
 1 = \frac{me^{kt}}{bk} - \frac{m}{bk}
-
 \\[10pt] 
-\text{great! now m, b, and k can move over}
+\textsf{great! now m, b, and k can move over}
 \\[10pt]
-
 \frac{bk}{m} = e^{kt} - 1
-
 \\[10pt] 
-\text{add the one and take the log to remove the exponent}
+\textsf{add the one and take the log to remove the exponent}
 \\[10pt]
-
 log\left(\frac{bk}{m} + 1\right) = kt
-
-
 \\[10pt] 
-\text{now just move the k over}
+\textsf{now just move the k over}
 \\[10pt]
-
 \frac{1}{k}log\left(\frac{bk}{m} + 1\right) = t
-
 \\[10pt] 
-\text{and the inside just simplifies to m as denominator}
+\textsf{and the inside just simplifies to m as denominator}
 \\[10pt]
-
 t = \frac{1}{k}*log\left(\frac{m + bk}{m}\right)
-
 $$
 
 
 ### Checking our work
 
-No need to check our work here! Our equation matches Marc's!
+No need to check our work here! Our equation matches Marc's! You can do exercise 2.4 now otherwise we show the answer below. 
 
 ### Reflecting on the biology
+
+This was a very enlightening exercise because we combined our intuitive understandings of growth and fitness to produce a realistic estimate of when maturity should be expected. Of course there are assumptions to this, such as our survival may be wildly different from the function we started with. But with a little calculus we figured out exactly where we should expect to see mature fish from an age perspective. Exercise 4 shows us what to do to see things from a length perspective. Just a little algebra!
+
+$$
+\\[10pt] 
+\textsf{start with our growth equation}
+\\[10pt]
+L(t) = L_\infty(1 − exp(kt))
+\\[10pt] 
+\textsf{and our maturity equation}
+\\[10pt]
+tm = \frac{1}{k}log(\frac{m + bk}{m})
+\\[10pt] 
+\textsf{substitute our maturity equation into our growth equation}
+\\[10pt]
+L(tm) = L_\infty(1 − exp(k(\frac{1}{k}log(\frac{m + bk}{m}))))
+\\[10pt] 
+\textsf{and simplify, k's cancel out}
+\\[10pt]
+= L_\infty(1 − exp(−log(\frac{m + bk}{m})))
+\\[10pt] 
+\textsf{exp and log cancel out}
+\\[10pt]
+= L_\infty(1 − \frac{1}{\frac{m + bk}{m}})
+\\[10pt] 
+\textsf{rearrange the fraction}
+\\[10pt]
+=L_\infty(\frac{m + bk − m}{m + bk})
+\\[10pt] 
+\textsf{m's cancel out}
+\\[10pt]
+= L_\infty(\frac{bk}{m + bk})
+\\[10pt] 
+\textsf{divide out the k's}
+\\[10pt]
+= L_\infty(\frac{b}
+{b + \frac{m}{k}})
+$$
+
+We can then plot this relationship to show some hypothetical growth curves and their expected maturity given some assumptions about mortality!
+
+```{r}
+vbg <- function(k,Linf,x) Linf*(1-exp(-k*x))
+tmg <- function(b,m,k) 1/k * log((m + b*k)/m)
+lmg <- function(Linf,b,m,k) Linf*(b/(b+(m/k)))
+b <- 3
+m <- 0.25
+k <- 0.15
+Linf <- seq(50,110,10)
+col<-rainbow(length(Linf))
+
+for(i in seq_along(Linf)) {
+    curve(vbg(.15, Linf[i], x), from=0, to=25, add=i!=1, col=col[i], ylim=c(0,130), ylab = "Length (cm)", xlab = "Age (y)", main="Multiple values of L_inf with a k=0.15 \n and mortality of 0.25 for maturity")
+  points(tmg(b,m,k),lmg(Linf[i],b,m,k))
+}
+```
+
+
